[package]
name = "gir"
version = "0.1.0"
edition = "2024"

[dependencies]
pwd-grp = {version = "1.0.0", features = ["full"] }
glob = "0.3.2"
configparser = "3.1.0"
chrono = "0.4.41"
sha1 = "0.10.6"
flate2 = { version = "1.0.17", features = ["zlib-rs"], default-features = false }
regex = "1.11.1"
clap = { version = "4.5.40", features = ["derive"] }
